--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-
+html, body{overflow-x: hidden;
+max-width: 100%;
+}
 a{
 	text-decoration: none;
   width: 100%;
@@ -38,13 +40,21 @@ header{position: fixed; width: 95vw; }
 		border: 0; cursor: pointer; opacity: 0.8;}
 .header_text ul li a:hover{color: white; opacity: 1;}
 
-.header_bar{display: grid; justify-content: flex-end; padding: 20px 20px 20px 0;}
-.bar_close, .bar_open{padding: 20px; cursor: pointer; margin: 0;}
-.bar_menu{display: grid; grid-gap: 20px; color: grey; font-size: 17px; list-style: none; padding: 0; rid-gap: 21px;}
-.bar_menu li a{font-weight: bold; cursor: pointer; color: grey; opacity: 0.8;}
+@media screen and (min-width: 1279px){
+.header_bar{display: none; justify-content: flex-end; padding: 20px 20px 20px 0; }
+.bar_menu{display: none; grid-gap: 20px; color: grey; font-size: 17px; list-style: none; padding: 0; rid-gap: 21px; }
+}
+@media screen and(max-width :979px) {
+	.header_bar{display: grid;  }
+	.bar_menu{display: grid; }
+}
 
+.bar_close, .bar_open{padding: 20px; cursor: pointer; margin: 0;}
+.bar_menu li a{font-weight: bold; cursor: pointer; color: grey; opacity: 0.8;}
 .bar1, .bar2, .bar3 { width: 35px; height: 5px; background-color: grey; margin: 6px 0;}
 .hidden{display: none;}
+
+
 #intro{display: flex; justify-content: center; align-items: center; height: 100vh;
     background-image: url(../images/background01.jpg); background-attachment: fixed;
 		background-repeat: no-repeat; background-size: cover;color: #fff; width: 100%; z-index: 1000;}
@@ -52,46 +62,34 @@ header{position: fixed; width: 95vw; }
 		white-space: pre; line-height: 1; letter-spacing: 0.1rem; padding-top: 0.2em;
 		animation-name: cursor; animation-duration: 0.3s; border-right: 2px solid #ccc; }
 
-#about{height: 100vh; background-color: #fff; width: 100%; z-index: 500;}
-.about_title{margin-left: 5vw; margin-right: 12vw; width: 60vw; height: 400px; vtext-align: left; }
-.about_title h2{color: black; font-size: 20px; font-weight: bold;}
-.about_content{width: 100%; text-align: left; margin-left: 70px; font-size: 46px; font-weight: 400; line-height: 1.74;}
-.about_content p{font-size: 1vw; line-height: 2rem; color: black;
-		margin-top: 1.5vw;}
-.profile_img{position: relative; width: 398px; height: 330px;
-	background-image: url(../images/background01.jpg); background-repeat: no-repeat;
+#about{position: relative; height: 150vh; background-color: #fff; width: 100%; z-index: -1;}
+.about_profile{margin-top: 30px; margin-left: 5vw; margin-right: 12vw; width: 60vw; height: 400px; vtext-align: left; }
+.about_profile h2{margin-top: 10px; color: black; font-size: 20px; font-weight: bold;}
+.about_title{position: absolute; top: 0; right:20px;width: 100%; text-align: right; margin-left: 70px;}
+.about_title p{font-size: 40px; line-height: 4rem; color: black;
+		margin-top: 20px;}
+.profile_img{ width: 398px; height: 330px;
+	background-image: url(../images/profile02.jpg); background-repeat: no-repeat;
     background-position: 20% 100%; background-size: 100%;}
-.profile_img:after{position: absolute; left: -14px; top: 30px; display: block;
-    width: inherit; height: inherit; content: ""; border: 3px solid #ffdb45;}
-
+.profile_img:after{width: inherit; height: inherit; display: block; content: ""; border: 3px solid #ffdb45;}
+.about_text{position: relative; margin-left: 5vw; margin-top: 90px; font-size: 19px; letter-spacing: 0.2px; line-height: 1.95;}
+.about_text_item{margin-top: 40px;}
 #memories {height: 100vh; background-color: #ccc; width: 100%; z-index: 500;}
-#footer {height: 100vh; background-color: #fff; width: 100%; z-index: 500;}
+#learning {height: 100vh; background-color: #ccf; width: 100%; z-index: 500;}
+#footer {height: 20vh; background-color: #fff; width: 100%; z-index: 500;}
+
+@media screen and(max-height :979px) {
+.about_title{width: 100%; text-align: left; margin-left: 70px; font-size: 46px; font-weight: 400; line-height: 1.74;}
+.header_bar .bar_menu{display: grid;}
+}
 
 /*
-header{padding: 40px 40px 1px 40px; background: #312450; cursor: default;
-	width: 250px; height: 100%; left: 0; overflow-x: hidden;
-    overflow-y: auto; position: fixed; text-align: right; top: 0; z-index: 10000;}
-header nav {width: 100%; height: 100%;}
-header #container {width: 100%; height: 100%; opacity: 1; justify-content: center;}
-header #container nav ul{ width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center;}
-header #container nav ul li{ width: 100%; padding: 0 0 15px 15px; margin-bottom: 20px; position: relative; }
-#container nav a{display: block; line-height: 1.5; border: 0; font-size: 13px;
-	font-weight: bold;letter-spacing: 0.25em;line-height: 1.75; color: rgba(255, 255, 255, 0.35);}
-#container nav a:hover{color: white;}
-#container nav a:after { content: ''; border-radius: 2px; bottom: 0; height: 2px;
-position: absolute; right: 0; width: 90%; background-image: linear-gradient(to right, #5e42a6, #b74e91);}
-#container nav a.active{color: white;}
-
-#wrapper{position: relative; margin-left: 330px;}
-.wrapper.fullscreen{display: flex; flex-direction: column; justify-content: center;
-    min-height: 100vh;}
-#wrapper .inner{justify-content: center; padding: 4em 4em 2em 4em;}
-
-#intro{background-attachment: fixed; background-position: top right; background:url(../images/background01.png) repeat; background-size: 100% 100%;}
-#intro h1{font-size: 50px; font-weight: bold; line-height: 1.5; color: #ffffff; margin: 0 0 40px 0;}
-#intro p {font-size: 1.25em; margin: 0 0 60px 0; color: #ffffff}
-
-#footer{margin-left: 300px; background-color: #493382;}
-#footer .inner{width: 100%; height: 100%; position: relative; left: 0; top: 0;}
-#footer .inner ul{text-align: right; margin-right: 100px; }
+@media screen and (min-width: 1279px){
+.header_bar{display: none; justify-content: flex-end; padding: 20px 20px 20px 0; }
+.bar_menu{display: none; grid-gap: 20px; color: grey; font-size: 17px; list-style: none; padding: 0; rid-gap: 21px; }
+}
+@media screen and(max-width :979px) {
+	.header_bar{display: grid; justify-content: flex-end; padding: 20px 20px 20px 0; }
+	.bar_menu{display: grid; grid-gap: 20px; color: grey; font-size: 17px; list-style: none; padding: 0; rid-gap: 21px; }
+}
 */
