--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,10 @@ a{
 	text-decoration: none;
   width: 100%;
 }
-header{position: fixed; width: 95vw; }
 
+header{display: flex; position: fixed; width: 95vw; }
+
+.header_class{display: flex; margin-left: auto;}
 .header_text{position: sticky; float: right; background: rgba(0,0,0,0.6); height: 64px; width: 775px ;border-radius: 2px 2px 30px 30px;}
 .header_text ul{list-style: none; margin: 0;}
 .header_text ul li{margin-right: 3rem; padding: 1.5rem; float: right; }
@@ -40,19 +42,12 @@ header{position: fixed; width: 95vw; }
 		border: 0; cursor: pointer; opacity: 0.8;}
 .header_text ul li a:hover{color: white; opacity: 1;}
 
-@media screen and (min-width: 1279px){
-.header_bar{display: none; justify-content: flex-end; padding: 20px 20px 20px 0; }
-.bar_menu{display: none; grid-gap: 20px; color: grey; font-size: 17px; list-style: none; padding: 0; rid-gap: 21px; }
-}
-@media screen and(max-width :979px) {
-	.header_bar{display: grid;  }
-	.bar_menu{display: grid; }
-}
-
+.header_bar{display: none;}
 .bar_close, .bar_open{padding: 20px; cursor: pointer; margin: 0;}
+.bar_menu{display: none; grid-gap: 20px; color: grey; font-size: 17px; list-style: none; padding: 0; rid-gap: 21px;
+position: absolute; top: 50px; right: 2px;}
 .bar_menu li a{font-weight: bold; cursor: pointer; color: grey; opacity: 0.8;}
 .bar1, .bar2, .bar3 { width: 35px; height: 5px; background-color: grey; margin: 6px 0;}
-.hidden{display: none;}
 
 
 #intro{display: flex; justify-content: center; align-items: center; height: 100vh;
@@ -78,10 +73,13 @@ header{position: fixed; width: 95vw; }
 #learning {height: 100vh; background-color: #ccf; width: 100%; z-index: 500;}
 #footer {height: 20vh; background-color: #fff; width: 100%; z-index: 500;}
 
-@media screen and(max-height :979px) {
-.about_title{width: 100%; text-align: left; margin-left: 70px; font-size: 46px; font-weight: 400; line-height: 1.74;}
-.header_bar .bar_menu{display: grid;}
+@media screen and (max-width: 768px) {
+    /* 모바일에 사용될 스트일 시트를 여기에 작성합니다. */
+		.header_text{display: none;}
+		.header_bar{display: flex;}
+
 }
+
 
 /*
 @media screen and (min-width: 1279px){
